# nikke_script

./: .gitignore  config.py  readme-CN.md  readme.md  requirements.txt  run.py  screenshot_test.py  simulator_run.py  simulator_test.py  test_thread.py
logs/: simulutor.txt
utils/: mouse.py  strategy.py  win.py
utils/cpp/: CMakeCache.txt  CMakeLists.txt  test_screen.cpp
utils/cpp/include/: win.h
utils/cpp/src/: CMakeLists.txt  win.cpp
utils/simulator/: MuMuX.py  base.py  leidian.py
utils/simulator/functions/: battle_s.py  sim_room.py
utils/yolov5/: yolov5_onnx.py  yolov5t2_384.onnx
